# incremental_newbie

./: .gitignore  README.md  ask_print.cpp  main.cpp
cmake/hello/: CMakeLists.txt
cmake/student/: CMakeLists.txt
cmake/student/include/: Student.h
cmake/student/src/: Student.cpp  main.cpp
cmake/student_lib/: CMakeLists.txt
cmake/use_student_lib/: CMakeLists.txt  main.cpp
section_10/: main.cpp
section_12/: main.cpp
section_13/: Makefile  Movies.cpp  Movies.h  main.cpp  movie.cpp  movie.h
section_15/: Account.cpp  Account.h  Account_Utils.cpp  Account_Utils.h  Checking_Account.cpp  Checking_Account.h  Makefile  Savings_Account.cpp  Savings_Account.h  Trust_Account.cpp  Trust_Account.h  main.cpp
section_15_and_16/: Account.cpp  Account.h  Account_Utils.cpp  Account_Utils.h  Checking_Account.cpp  Checking_Account.h  I_Printable.h  Savings_Account.cpp  Savings_Account.h  Trust_Account.cpp  Trust_Account.h  main.cpp
section_15_and_16_and_18/: Account.cpp  Account_Utils.cpp  I_Printable.cpp  IllegalBalanceException.h  InsufficientFundsException.h  Savings_Account.cpp  Trust_Account.cpp  Trust_Account.h  main.cpp
section_17/: main.cpp
section_19/: main.cpp  response.txt
section_19_b/: main.cpp  romeo_and_juliet_out.txt  romeo_and_juliet_txt
section_5/: main.cpp
section_6/: main.cpp
section_7/: main.cpp
section_8/: main.cpp
section_9/: main.cpp
section_9_and_11/: main.cpp
structure/: main.cpp
